# Scratch-Projects

./: .gitignore  readme.txt
ES6-in-node/: package.json  readme.txt  test.js
Gulp-From-Scratch-Tutorial/: gulpfile.js  index.html  package-lock.json  package.json  readme.txt
ManifestV3/: .gitignore  package-lock.json  package.json  webpack.config.js
NeuralNetwork/: Pipfile  main.py
Webpack-Tutorial/: package-lock.json  package.json  readme.md  webpack.config.js
chrome-extension-rollup/: manifest.json  package-lock.json  package.json  readme.txt  rollup.config.js
edx-express-app/: create_table.sql  http-server.js  package-lock.json  package.json  quotes.sqlite  readme.txt  reference_sqlite_script.js  server.js
genesis-x3-prediction/: README.md  data_loader.py  g3x.json  main.py  output.txt  pyproject.toml  top_eight_tournament_simulation.py  world_cup_2026.json  worldcup-prediction-output.txt
genesis-x3-prediction/predictions/genesis-x3/: bracket_core.py  data_loader.py  main.py  players.py  single_elimination_simulation.py
genesis-x3-prediction/predictions/world-cup-2026/: util.py
genesis-x3-prediction/predictions/world-cup-2026-opiniated-live/: config-v2.json  config.json  main.py  output.txt  simulation.py  top_eight_tournament_simulation.py
genesis-x3-prediction/predictions/world-cup-2026-opinionated/: config-v2.json  config.json
genesis-x3-prediction/tests/: test_simulation.py  test_util.py
genesis-x3-prediction/visualizer/: data.json  export_data.py  index.html  quickstart.sh  styles.css
mutation-observer/: index.html  index.js
(+101 files in other folders)
